stateDiagram-v2
  [*] --> scheduled
  scheduled --> running: observer invocation begins
  scheduled --> cancelled: cancelled before invocation
  running --> ok: complete typed evidence
  running --> pending: evidence not ready
  running --> unsupported: capability unavailable
  running --> error: observer or protocol error
  running --> timed_out: physical deadline reached
  running --> cancelled: cancelled
  ok --> [*]
  pending --> [*]
  unsupported --> [*]
  error --> [*]
  timed_out --> [*]
  cancelled --> [*]
